[package]
name = "smoke_conversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vdb-rs = {git = "https://github.com/Traverse-Research/vdb-rs" }
clap =  { version = "4.4", features = ["derive"] }
pretty_env_logger = "0.5"
log = "*"
cgmath = { version = "0.18.0" }
byteorder = "*"
